Fixed issue with menu bar not showing

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -49,6 +49,6 @@
     }
 
     @mixin atMedium {
-        display: none;
+        display: block;
     }
 }
